{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 24,
  "lineage": "5a29c29b-9553-3eb8-7d10-8399bdcb6fe1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "eks_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418076327:internet-gateway/igw-0b1f132e5b9f33cd1",
            "id": "igw-0b1f132e5b9f33cd1",
            "owner_id": "905418076327",
            "vpc_id": "vpc-0874b7646e8b09072"
          },
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "eks_public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418076327:route-table/rtb-0059a5729f1992962",
            "id": "rtb-0059a5729f1992962",
            "owner_id": "905418076327",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b1f132e5b9f33cd1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0874b7646e8b09072"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.eks_gateway",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "eks_public_route_table_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0577f78565504d2b6",
            "route_table_id": "rtb-0059a5729f1992962",
            "subnet_id": "subnet-026e9a09ce688ba40"
          },
          "dependencies": [
            "aws_internet_gateway.eks_gateway",
            "aws_route_table.eks_public_route_table",
            "aws_subnet.eks_public_subnet",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_sg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418076327:security-group/sg-0aa52215c94771a34",
            "description": "Security group for EKS cluster nodes",
            "egress": [],
            "id": "sg-0aa52215c94771a34",
            "ingress": [],
            "name": "eks-security-group-1",
            "name_prefix": "",
            "owner_id": "905418076327",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03b04ceede64d6d7c"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_sg2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418076327:security-group/sg-077dedf9733cd204a",
            "description": "Security group for additional resources (optional)",
            "egress": [],
            "id": "sg-077dedf9733cd204a",
            "ingress": [],
            "name": "eks-security-group-2",
            "name_prefix": "",
            "owner_id": "905418076327",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03b04ceede64d6d7c"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eks_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418076327:subnet/subnet-0131cdc2dfa7e76ce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0131cdc2dfa7e76ce",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905418076327",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0874b7646e8b09072"
          },
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eks_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418076327:subnet/subnet-026e9a09ce688ba40",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-026e9a09ce688ba40",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "905418076327",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0874b7646e8b09072"
          },
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "eks_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418076327:vpc/vpc-0874b7646e8b09072",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09690f51535002ea1",
            "default_route_table_id": "rtb-0b6204877e19a39ea",
            "default_security_group_id": "sg-017e609af9e9fc33b",
            "dhcp_options_id": "dopt-00b692353dcec73a9",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0874b7646e8b09072",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b6204877e19a39ea",
            "owner_id": "905418076327"
          }
        }
      ]
    }
  ]
}